[gd_scene load_steps=4 format=3 uid="uid://btnf52ln1b6px"]

[ext_resource type="Script" path="res://ui/hand_panel/hand_panel.gd" id="1_3qlg7"]
[ext_resource type="PackedScene" uid="uid://bm842h44ddm1c" path="res://ui/card/card.tscn" id="2_e0vau"]
[ext_resource type="Texture2D" uid="uid://cab32lpo5nef1" path="res://assets/art/ui/discard.png" id="3_2f18m"]

[node name="HandPanel" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -516.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_3qlg7")
card_scene = ExtResource("2_e0vau")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 0

[node name="UseArea" type="ColorRect" parent="VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
custom_minimum_size = Vector2(1280, 800)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.0235294, 0.360784, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CardsPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CardsContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CardsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 1

[node name="DiscardArea" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.466667)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_2f18m")
stretch_mode = 2
